--- a/css/styles.css
+++ b/css/styles.css
@@ -34,10 +34,15 @@ body{
 		padding-left: 20px;
 		padding-right: 30px;
 		padding-bottom: 0;
-		color: #fff;
 		font-size: 1.4em;
 
 	}
+
+	.fas.fa-bars{
+		color: #fff;
+	}
+
+
 
 	nav li{
 		padding-right: 30px;
@@ -57,7 +62,8 @@ body{
 /*PORTFOLIO*/
 #portfolio{
 	background-color: #fafafa;
-	padding: 5% 15%;
+	color: #252525;
+	padding: 2% 15%;
 	text-align:center;
 	font-family: 'Roboto Mono', monospace;
 
@@ -76,20 +82,35 @@ body{
 			font-family: 'Merriweather', serif;
 
 		}
-		#portfolio img{
-			width: 100%;
-			border-radius: 10%;
 
+		#portfolio img{
+			width: 90%;
 		}
 
+						@media only screen and (max-width: 990px){
+							#portfolio img{
+								width: 100%;
+								
+							}
+							.pro{
+								pading-top: 30px;
+								padding-bottom: 30px;
+								box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+							}
+						}	
+
 		#portfolio .port{
-			padding-bottom: 30px;
+			padding-bottom: 5px;
 		}
 
 		.portPic{
 			padding-top: 5%;
-			width:70%;
 
+
+		}
+
+		.pro{
+			padding: 2% 2%;
 		}
 
 /*SKILLS*/
@@ -97,15 +118,85 @@ body{
 #skills{
 	background-color: #252525;
 	color: #fafafa;
-	padding: 5% 15%;
+	padding: 2% 15%;
+	text-align:center;
+
+}
+	#skills h1{
+		padding-bottom: 15px;
+
+	}
+
+	.program{
+		padding:1% 4%;
+	}
+	 .jscript{
+	 	text-align:left;
+	 }
+
+	.fab.fa-java{
+		color:#fafafa\;
+	}
+
+/*WORK EXPERIENCE */
+
+#workExp{
+	background-color: #fafafa ;
+	color:#252525;
+	padding: 2% 15%;
+	text-align:left;
+
+}
+
+	#workExp h1{
+		text-align: center;
+		padding-bottom: 10px;
+	}
+	#workExp h3{
+		text-align: left;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
+	.list-group{
+		font-weight: bold;
+		padding: 1% 15%;
+	}
+
+/*EDUCATION */
+
+#education{
+	background-color: #4baea0 ;
+	color:#f6f078;
+	padding: 2% 15%;
+	text-align:center;
+
+}
+.fas.fa-graduation-cap{
+	color:#f6f078;
+}
+
+/*Contact*/
+
+#contact{
+	background-color:#252525 ;
+	color:#fafafa;
+	padding: 2% 15%;
 	text-align:center;
 
 }
 
+	#contact h1{
+		padding-bottom:10px;
+	}
 
-
-
-
+	a:link{
+		text-decoration: none;
+		color:#fafafa;
+	}
+	a:hover{
+		color:#64b2cd;
+	}
 
 
 
