--- a/css/styles.css
+++ b/css/styles.css
@@ -87,17 +87,7 @@ body{
 			width: 90%;
 		}
 
-						@media only screen and (max-width: 990px){
-							#portfolio img{
-								width: 100%;
-								
-							}
-							.pro{
-								pading-top: 30px;
-								padding-bottom: 30px;
-								box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-							}
-						}	
+	
 
 		#portfolio .port{
 			padding-bottom: 5px;
@@ -199,9 +189,57 @@ body{
 	}
 
 
+@media only screen and (max-width: 990px){
+							#portfolio img{
+								width: 100%;
+								
+							}
 
+							.list-group{
+								padding: 0;
+							}
+							
+						}
+@media only screen and (max-width: 800px){
+		#top img{
+			height: 100px;
+			width: 100px;
+		}
 
+	}
+@media only screen and (max-width: 450px){
+		h1, h2{
+			font-size: 1.5em;
+		}
+		h3{
+			font-size: 1em;
+		}
+		p{
+			font-size: .8em;
+		}
 
+		#portfolio p{
+			font-size: 1em;
+		}
 
+		#workExp  li{
+			font-weight: normal;
+		}
+		#top img{
+			height: 100px;
+			width: 100px;
+		}
+		#education h2{
+			font-size: 1em;
+		}
+		#contact{
+			padding: 1% 10%;
+			font-size: .6em;
+		}
+		#contact h3{
+			font-size: 1em;
+		}
+		
+	}
 
 
