fixed education part

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,10 +242,10 @@ body{
 			width: 100px;
 		}
 		#education h1{
-			font-size:.7em;
+			font-size:1em;
 		}
 		#education h2{
-			font-size: .5em;
+			font-size: .8em;
 		}
 		#contact{
 			padding: 1% 10%;
