--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,9 @@ body{
 
 #top{
 	padding-top: 0;
-	padding-bottom: 15%;
+	padding-bottom: 5%;
 	width: 100%;
-	bakcground-postion: absolute;
+	background-postion: absolute;
 	background-image: url("https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&dpr=2&w=500");
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -97,12 +97,6 @@ body{
 		}
 
 	
-
-		
-
-
-	
-
 /*SKILLS*/
 
 #skills{
@@ -191,6 +185,9 @@ body{
 	}
 	#contact a:hover{
 		color:#64b2cd;
+	}
+	#contact a:active{
+		color: #fafafa;
 	}
 
 
