Added school colors

--- a/images/css/styles.css
+++ b/images/css/styles.css
@@ -156,14 +156,14 @@ body{
 /*EDUCATION */
 
 #education{
-	background-color: #4baea0 ;
-	color:#f6f078;
+	background-color: #006940 ;
+	color:#ffcc32;
 	padding: 2% 15%;
 	text-align:center;
 
 }
 .fas.fa-graduation-cap{
-	color:#f6f078;
+	color:#ffcc32;
 	font-size: 1.5;
 }
 
