--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body{
 }
 
 .row{
-	pading-top: 20px;
+	padding-top: 20px;
 	padding-bottom: 20px;
 }
 
@@ -94,7 +94,8 @@ body{
 		}
 		.port img{
 			height: 300px;
-			object-fit:cover;
+			object-fit: cover;
+			object-position: center top;
 		}
 
 	
